--- a/hungpvph28127/hungpvph28127/appsettings.json
+++ b/hungpvph28127/hungpvph28127/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "BookStore": "Data Source=VANHUNG;Initial Catalog=MyBookStore  ;Persist Security Info=True; Integrated Security = True; "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:7166",
+    "Secret": "ThisIsTheSecureKey1234567890"
+  }
 }
