--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Football": "Data Source=VANHUNG;Initial Catalog=MyFootball;Persist Security Info=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
